--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-Unnamed repository; edit this file 'description' to name the repository.
+modulePre is a computer cluster made of raspberry PI equiped with a speaker and an amplifier for broadcasting localised sounds.
